--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .mat-expansion-indicator::after {
-    color: green;
+    border-color: black;
   }
 
 ::ng-deep mat-tab-header {
