Requirements Tab Updated on client profile

--- a/src/app/modules/main/content/components/admin/admin.component.html
+++ b/src/app/modules/main/content/components/admin/admin.component.html
@@ -19,7 +19,7 @@
                                 <img class="w-3/12" src="assets/gifs/dev-progress.gif">
                             </div>
                             <div class="w-full text-center text-gray-600 -mt-28 font-bold">
-                                Development in progress...
+                                Feature Coming Soon...
                             </div>
                         </div>
                     </mat-tab>
@@ -31,7 +31,7 @@
                                 <img class="w-3/12" src="assets/gifs/dev-progress.gif">
                             </div>
                             <div class="w-full text-center text-gray-600 -mt-28 font-bold">
-                                Development in progress...
+                                Feature Coming Soon...
                             </div>
                         </div>
                     </mat-tab>
@@ -43,7 +43,7 @@
                                 <img class="w-3/12" src="assets/gifs/dev-progress.gif">
                             </div>
                             <div class="w-full text-center text-gray-600 -mt-28 font-bold">
-                                Development in progress...
+                                Feature Coming Soon...
                             </div>
                         </div>
                     </mat-tab>
