--- a/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
+++ b/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
@@ -169,50 +169,53 @@
                 <mat-tab label="Requirements">
                     <div class="w-full flex flex-wrap items-center px-4">
 
-                        <mat-accordion class="w-full my-4 border border-gray-200 rounded-md">
+                        <mat-accordion class="w-full mt-4 mb-3 border border-gray-300 rounded" *ngFor="let phase of phases">
                             <mat-expansion-panel (opened)="requirementsPanelOpenState = true"
                                                  (closed)="requirementsPanelOpenState = false">
                               <mat-expansion-panel-header>
                                 <mat-panel-title>
-                                  #Phase 1
+                                  #Phase {{phase.phaseNumber}}
                                 </mat-panel-title>
                                 <mat-panel-description class="text-xs">
-                                  23rd March 2023 - 20th April 2023
+                                    {{phase.phaseStartDate}} - {{phase.phaseEndDate}}
                                 </mat-panel-description>
                               </mat-expansion-panel-header>
                               
                               <!-- Panel Content -->
                               <div class="w-full">
-                                <div class="w-full flex justify-between items-center p-4 border mb-4 border-gray-200 rounded-md">
+                                <div class="w-full flex justify-between items-center p-4 border mb-4 border-gray-200 rounded-md"
+                                *ngFor="let requirement of phase.requirements" [ngClass]="{'shadow-xl border-gray-300' : viewMoreReqDetails === requirement.id}">
                                     <div class="w-11/12">
                                         <!-- Title, Desc, Project, Type, Links, Start Date, End Date, Status -->
-                                        <div class="w-full text-lg">Requirement Title</div>
-                                        <div class="w-full text-xs text-gray-500">Requirement description with all the required details related to the requirment and possible enhancements on the same.</div>
-                                        <div class="w-full flex mt-8">
+                                        <div class="w-full text-lg">{{requirement.title}}</div>
+                                        <div class="w-full text-xs text-gray-500">{{requirement.description}}</div>
+                                        <div class="w-full pt-3" *ngIf="viewMoreReqDetails !== requirement.id " (click)="toggleRequirementView(requirement.id)"><span class=" text-xs text-blue-500 cursor-pointer">Show More Details</span></div>
+                                        <div class="w-full pt-3" *ngIf="viewMoreReqDetails === requirement.id" (click)="toggleRequirementView('')"><span class=" text-xs text-blue-500 cursor-pointer">View Less</span></div>
+                                        <div class="w-full flex mt-8" *ngIf="viewMoreReqDetails === requirement.id">
                                             <div class="mr-24">
                                                 <div class="text-xs uppercase">Requirement Type</div>
-                                                <div class="mt-2">UI</div>
+                                                <div class="mt-2">{{requirement.type}}</div>
                                             </div>
                                             <div class="mr-24">
                                                 <div class="text-xs uppercase">Project</div>
-                                                <div class="mt-2">Project Name</div>
+                                                <div class="mt-2">{{requirement.projectName}}</div>
                                             </div>
                                             <div class="mr-24">
                                                 <div class="text-xs uppercase">Label</div>
-                                                <div class="mt-2">GL</div>
+                                                <div class="mt-2">{{requirement.label}}</div>
                                             </div>
                                             <div class="mr-24">
                                                 <div class="text-xs uppercase">Start Date</div>
-                                                <div class="mt-2">23rd March 2023</div>
+                                                <div class="mt-2">{{requirement.startDate}}</div>
                                             </div>
                                             <div class="mr-24">
                                                 <div class="text-xs uppercase">End Date</div>
-                                                <div class="mt-2">20th March 2023</div>
+                                                <div class="mt-2">{{requirement.endDate}}</div>
                                             </div>
                                             <div class="mr-24">
                                                 <div class="text-xs uppercase">Status</div>
                                                 <div class=" mt-2">
-                                                    <span class="text-right text-xs px-3 py-0.5 rounded-full uppercase" [ngClass]="getStatusStyle('In Progress')">In Progress</span>
+                                                    <span class="text-right text-xs px-3 py-0.5 rounded-full uppercase" [ngClass]="getStatusStyle(requirement.status)">{{requirement.status}}</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -238,7 +241,7 @@
                             <img class="w-3/12" src="assets/gifs/dev-progress.gif">
                         </div>
                         <div class="w-full text-center text-gray-600 -mt-28 font-bold">
-                            Development in progress...
+                            Feature Coming Soon...
                         </div>
                     </div>
                 </mat-tab>
@@ -252,7 +255,7 @@
                             <img class="w-3/12" src="assets/gifs/dev-progress.gif">
                         </div>
                         <div class="w-full text-center text-gray-600 -mt-28 font-bold">
-                            Development in progress...
+                            Feature Coming Soon...
                         </div>
                     </div>
                 </mat-tab>
