--- a/src/app/modules/main/content/components/timelines/timelines.component.html
+++ b/src/app/modules/main/content/components/timelines/timelines.component.html
@@ -5,6 +5,6 @@
             <img class="w-3/12" src="assets/gifs/dev-progress.gif">
         </div>
         <div class="w-full text-center text-gray-600 -mt-28 font-bold">
-            Development in progress...
+            Feature Coming Soon...
         </div>
 </div>
