--- a/src/app/modules/shared/components/dialog/dialog.component.html
+++ b/src/app/modules/shared/components/dialog/dialog.component.html
@@ -2,14 +2,17 @@
     <div class="w-full p-2 rounded-xl border border-gray-200">
         <!-- Title -->
         <div class="w-full my-2 px-4 text-blue-500 text-lg font-bold text-center">Create New</div>
-        <div class="flex p-4 items-center hover:text-blue-500 hover:rounded-xl cursor-pointer" *ngFor="let menu of navMenuOptions" mat-dialog-close [routerLink]="['../', 'main', menu.route[0], menu.route[1]]">
-            <div class="p-4 flex items-center rounded-xl bg-gray-100">
-                <mat-icon class="">{{menu.icon}}</mat-icon>
-            </div>
-            <div class="px-4">
-                <div class="font-bold">{{menu.name}}</div>
-                <div class="text-xs text-gray-500">{{menu.description}}</div>
+        <div class="w-full flex flex-wrap justify-between mt-8 mb-6">
+            <div class="w-6/12 flex p-4 items-center hover:text-blue-500 hover:rounded-xl cursor-pointer" *ngFor="let menu of navMenuOptions" mat-dialog-close [routerLink]="['../', 'main', menu.route[0], menu.route[1]]">
+                <div class="p-4 flex items-center rounded-xl bg-gray-100">
+                    <mat-icon class="">{{menu.icon}}</mat-icon>
+                </div>
+                <div class="px-4">
+                    <div class="font-bold">{{menu.name}}</div>
+                    <div class="text-xs text-gray-500">{{menu.description}}</div>
+                </div>
             </div>
         </div>
+        
     </div>
 </div>
