--- a/src/app/modules/main/content/components/admin/child-components/member-profile/member-profile.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/member-profile/member-profile.component.html
@@ -37,8 +37,8 @@
                 <mat-tab label="About">
                     <!-- Member About -->
                     <div class="w-full p-4 flex flex-wrap">
-                        <div class="w-full text-gray-800 mt-4">I'm Software Developer, specialized majorly on UI development, designing, creating, and maintaining software application.</div>
-                        <div class="my-4 border border-gray-200 rounded-md w-4/12">
+                        <div class="w-full text-gray-800 p-4">I'm Software Developer, specialized majorly on UI development, designing, creating, and maintaining software application.</div>
+                        <div class="m-4 border border-gray-200 rounded-md w-4/12">
                             <div class="flex justify-between p-4 border-b border-gray-200">
                                 <div class="text-gray-500">Title</div>
                                 <div class="">Front-end Developer</div>
@@ -65,7 +65,7 @@
                     <div class="w-full p-4 border-b border-gray-200">
                         <div class="w-full flex flex-wrap">
                             <div class="w-3/12 p-4" *ngFor="let data of [0,1,2,3,4]">
-                                <div class="w-full border border-gray-200 rounded-md p-4 hover:border-blue-700">
+                                <div class="w-full border border-gray-200 rounded-md p-4 hover:border-gray-500">
                                     <div class="text-base flex items-center">Project Name <span class="bg-gray-100 px-1 text-xs rounded-md ml-2 border border-gray-200">GL</span></div>
                                     <div class="text-gray-500 text-xs">12 Members</div>
                                     <div class="w-full flex justify-between items-center mt-8">
