Client Creation Component Added.

--- a/src/app/modules/main/content/components/admin/admin.component.html
+++ b/src/app/modules/main/content/components/admin/admin.component.html
@@ -2,26 +2,14 @@
 
     <!-- Lists -->
     <div class="w-full p-3">
-        <div class="w-full p-3 border border-gray-200 rounded-md my-4">
+        <div class="w-full border border-gray-200 rounded-md my-4">
             <!-- Title -->
-            <div class="w-full text-lg px-3 text-gray-800">Admin</div>
+            <!-- <div class="w-full text-lg px-3 text-gray-800">Admin</div> -->
 
             <div class="">
-                <mat-tab-group class="" mat-stretch-tabs="false" mat-align-tabs="start">
+                <mat-tab-group class="" mat-align-tabs="start">
                     <mat-tab label="Members">
                         <app-admin-members></app-admin-members>
-                    </mat-tab>
-                    <mat-tab label="Project Management">
-                        <div class="w-full flex flex-wrap items-center px-4">
-
-                            <!-- In Pgoress -->
-                            <div class="w-full flex justify-center p-3 mt-16">
-                                <img class="w-3/12" src="assets/gifs/dev-progress.gif">
-                            </div>
-                            <div class="w-full text-center text-gray-600 -mt-28 font-bold">
-                                Feature Coming Soon...
-                            </div>
-                        </div>
                     </mat-tab>
                     <mat-tab label="Reports & Stats">
                         <div class="w-full flex flex-wrap items-center px-4">
